# alarmix

./: .gitignore  .pre-commit-config.yaml  README.md  README.rst  pyproject.toml
.github/workflows/: pre-commit.yml  python-publish.yml
alarmix/: exceptions.py  schema.py  utils.py
alarmix/client/: main.py
alarmix/daemon/: alarm_manager.py  buzzer.py  main.py  server.py
