[tool.poetry]
name = "alarmix"
version = "0.2.13"
description = "Alarm manager server and client"
authors = ["Pavel Kirilin <win10@list.ru>"]
packages = [
    { include = "alarmix" },
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
loguru = "^0.5.3"
prettytable = "^1.0.1"

[tool.poetry.scripts]
alarmc = 'alarmix.client.main:main'
alarmd = 'alarmix.daemon.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

