[tool.poetry]
name = "alarmix"
version = "0.8.11"
description = "Alarm manager server and client"
authors = ["Pavel Kirilin <win10@list.ru>"]
repository = "https://github.com/s3rius/alarmix"
homepage = "https://github.com/s3rius/alarmix"
readme = "README.rst"

packages = [
    { include = "alarmix" },
]

classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.8",
    "Topic :: Utilities"
]
keywords = [
    "Poetry",
    "Alarm",
    "Unix sockets"
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.7.2"
loguru = "^0.5.3"
prettytable = "^2.0.0"
daemonize = "^2.5.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.8.2"

[tool.poetry.scripts]
alarmc = 'alarmix.client.main:main'
alarmd = 'alarmix.daemon.main:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

